fixing up some spacing

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -74,7 +74,7 @@
   }
 
   #form-cont-home{
-    width: 200px;
+    width: 270px;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
     
