--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -89,7 +89,10 @@ h4 {
 
 .recipe-link {
   color: white;
-  font-size: 19px;
+  font-size: 30px;
+  padding: 5px;
+  text-align: center;
+
 
   &:hover {
     color:white;
